Merge from 2-0 and some fixes to controllers that need to recover running version after no samplers under them have run.
git-svn-id: https://svn.apache.org/repos/asf/jakarta/jmeter/trunk@325222 13f79535-47bb-0310-9956-ffa450edef68